Bug 1626887 Followup - Don't leave a task folder around when we fail to create a scheduled task. r=bytesized

This is needed to prevent a failed attempt to create the task from blocking
out the ability to try again later if the two attempts are run under different
user contexts, where the second is more limited than the first, because the
less privileged attempt is unlikely to have permission to write to the folder
created by the more privileged one. In particular the MSI installer runs into
this scenario, because it makes one attempt to register the task as SYSTEM,
followed by a second attempt as the unelevated interactive user.

This is also nice because it keeps us from leaving an empty folder behind
under any circumstances, not just this specific situation.

Differential Revision: https://phabricator.services.mozilla.com/D77184